--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.3.0",
     "mysql2": "^3.14.0",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
