--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "postinstall": "prisma generate",
     "build": "tsc",
-    "start": "node --max_old_space_size=4096 dist/server.js",
+    "start": "node server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
