--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ecommerce-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js", 
   "scripts": {
     "postinstall": "prisma generate",
     "build": "tsc",
-    "start": "node server.js",
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
